# retro-prpl

./: .codespellrc  .gitignore  COPYRIGHT  ChangeLog  README.md  dist-version.sh  get-version.py  internal.h  meson.build  meson_options.txt  version.py
.github/workflows/: codeql-analysis.yml  i18n.yml  linux.yml  macos.yml  transifex.yml  update-version.yml  win32-cross.yml
.tx/: config
gg/: confer.h  gg-utils.h  gg.c  meson.build  search.h
gg/lib/: common.c  config.h  dcc.c  events.c  handlers.c  libgadu.h  meson.build  message.c  protobuf-c.c  protobuf.h  pubdir.c  resolver.c  sha1.c
gg/lib/include/: libgadu.h
libpurple/protocols/gg/: gg.c
libpurple/protocols/zephyr/: ZAsyncLocate.c  ZFlsSubs.c  ZIfNotice.c  ZInit.c  ZMkAuth.c  ZRetSubs.c  ZSendNot.c  ZSubs.c  ZWait4Not.c  Zinternal.c  zephyr.c
msn/: cmdproc.c  contact.c  directconn.c  error.c  error.h  httpconn.c  meson.build  msg.c  msn.c  msnutils.c  msnutils.h  nexus.c  notification.c  oim.c  servconn.c  servconn.h  session.c  session.h  slp.c  slpcall.c  slpmsg.c  slpmsg.h  state.c  switchboard.c  switchboard.h  table.h  tlv.c  tlv.h  user.h  userlist.c  xfer.c
msn/pixmaps/: meson.build
mxit/: actions.c  aes.c  aes.h  chunk.c  filexfer.c  formcmds.c  http.c  login.c  markup.c  meson.build  multimx.c  mxit.c  mxit.h  profile.c  protocol.c  roster.c  splashscreen.c
myspace/: markup.c  meson.build  message.c  myspace.c  myspace.h  persist.h  user.c  zap.c
napster/: meson.build  napster.c
novell/: meson.build  nmconference.h  nmconn.c  nmrtf.c  nmuser.c  novell.c
oscar/: authorization.c  clientlogin.c  encoding.c  encoding.h  family_admin.c  family_alert.c  family_chat.c  family_chatnav.c  family_feedbag.c  family_icbm.c  family_icq.c  family_locate.c  family_oservice.c  flap_connection.c  kerberos.c  libaim.c  libicq.c  meson.build  odc.c  oft.c  oscar.c  oscar.h  peer.c  peer_proxy.c  tlv.c  userinfo.c  util.c  visibility.c
oscar/pixmaps/: meson.build
po/: POTFILES  README.md  meson.build
qq/: ChangeLog  buddy_info.c  buddy_list.c  buddy_memo.c  buddy_opt.c  file_trans.c  group.c  group.h  group_im.c  group_info.c  group_join.c  group_opt.c  im.c  im.h  meson.build  qq.c  qq.h  qq_base.c  qq_crypt.c  qq_crypt.h  qq_define.c  qq_network.c  qq_process.c  qq_trans.c  send_file.c  utils.c
sametime/: meson.build  sametime.c
sametime/pixmaps/: meson.build
silc/: buddy.c  meson.build  silc.c  wb.c
silc10/: buddy.c  chat.c  meson.build  ops.c  silc.c  util.c  wb.c
src/: oscar.c
toc/: meson.build  toc.c
trepia/: trepia.c
yahoo/: libyahoo.c  libyahoojp.c  libymsg.c  libymsg.h  meson.build  util.c  yahoo_aliases.c  yahoo_doodle.c  yahoo_filexfer.c  yahoo_packet.c  yahoo_picture.c  yahoo_profile.c  yahoochat.c  ycht.c
zephyr/: Makefile.am  ZAsyncLocate.c  ZCkAuth.c  ZCkIfNot.c  ZClosePort.c  ZCmpUID.c  ZCmpUIDP.c  ZFlsLocs.c  ZFlsSubs.c  ZFmtAuth.c  ZFmtList.c  ZFmtNotice.c  ZFmtRaw.c  ZFmtRawLst.c  ZFmtSmRLst.c  ZFmtSmRaw.c  ZFreeNot.c  ZGetLocs.c  ZGetSender.c  ZGetSubs.c  ZGetWGPort.c  ZIfNotice.c  ZInit.c  ZLocations.c  ZMakeAscii.c  ZMkAuth.c  ZNewLocU.c  ZOpenPort.c  ZParseNot.c  ZPeekIfNot.c  ZPeekNot.c  ZPeekPkt.c  ZPending.c  ZReadAscii.c  ZRecvNot.c  ZRecvPkt.c  ZRetSubs.c  ZSendList.c  ZSendNot.c  ZSendPkt.c  (+15 more)
