mxit_prpl = shared_library('mxit',
  'actions.c',
  'aes.c',
  'chunk.c',
  'cipher.c',
  'filexfer.c',
  'formcmds.c',
  'http.c',
  'login.c',
  'markup.c',
  'multimx.c',
  'mxit.c',
  'profile.c',
  'protocol.c',
  'roster.c',
  'splashscreen.c',
  include_directories: toplevel_inc,
  dependencies: [libpurple_dep, glib_dep],
  install_dir: libpurple_dep.get_variable('plugindir'),
)
